add live reload oO

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Eruption</title>
   </head>
   <body>
-    <h1>hello vasa</h1>
-    <script src="index.js"></script>
+    <h1>hello fedya</h1>
+    <script src="/js/index.js"></script>
   </body>
 </html>
