--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Eruption</title>
+    <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
-    <h1>hello fedya</h1>
+    <div class="container">
+      <h1>hello fedya</h1>
+    </div>
     <script src="/js/index.js"></script>
   </body>
 </html>
