--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <body>
     <div class="container">
       <h1>hello fedya</h1>
+      <i class="fas fa-user"></i>
+      <i class="far fa-user"></i>
+      <i class="fa fa-user"></i>
     </div>
     <script src="/js/index.js"></script>
   </body>
