--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>hello fedya</h1>
-      <i class="fas fa-user"></i>
-      <i class="far fa-user"></i>
-      <i class="fa fa-user"></i>
+    <div class="container app__container">
+      <div class="d-flex justify-content-between align-items-center pt-20">
+        <h1>hello fedya</h1>
+        <i class="fa fa-user"></i>
+      </div>
     </div>
     <script src="/js/index.js"></script>
   </body>
