--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
-    <div class="container app__container">
-      <div class="d-flex justify-content-between align-items-center pt-20">
-        <h1>hello fedya</h1>
-        <i class="fa fa-user"></i>
-      </div>
-    </div>
+    <div id="root"></div>
     <script src="/js/index.js"></script>
   </body>
 </html>
