--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <title>Eruption</title>
     <link rel="stylesheet" href="/css/index.css" />
+    <link rel='preload' href='/font/fa-solid-900.woff' as='font' type='font/woff' crossorigin='anonymous'>
+    <link rel="preload" href="/img/v1.jpg" as="image">
   </head>
   <body>
     <div id="root"></div>
