--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,7 +8,7 @@
     <link rel="preload" href="/img/v1.jpg" as="image">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">{{content}}</div>
     <script src="/js/index.js"></script>
   </body>
 </html>
