--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="root">{{content}}</div>
+    <script>{{initialState}}</script>
     <script src="/js/index.js"></script>
   </body>
 </html>
